--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
+  branches:
+    include:
+    - '*'
 
 resources:
 - repo: self
@@ -21,6 +23,8 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'    
     steps:
+    - task: WhiteSource Bolt@19
+      displayName: 'Run WhiteSource Bolt'      
     - task: Docker@2
       displayName: Build an image
       inputs:
